# aumos-quantum-readiness

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/aumos_quantum_readiness/: __init__.py  main.py  settings.py
src/aumos_quantum_readiness/adapters/: __init__.py  compliance_verifier.py  crypto_agility.py  dilithium_adapter.py  harvest_defense.py  hybrid_key_exchange.py  kafka.py  kyber_adapter.py  migration_planner.py  pqc_engine.py  repositories.py  vulnerability_scanner.py
src/aumos_quantum_readiness/api/: __init__.py  router.py  schemas.py
src/aumos_quantum_readiness/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py  conftest.py  test_pqc_engine.py  test_services.py
